--- a/Index.html
+++ b/Index.html
@@ -9,26 +9,25 @@
     <script src="main.js"></script>
 </head>
 <body>
-    <header>
-        <h1 class="mainTitle">OhMyCats!</h1>
+    <header style="background-color:#cccccc">
+        <h1>OhMyCats !</h1>
+        <nav>
 
-        <h1 class="pageTitle">Adoptez un chat trop beau !</h1>
-        <h2>Nos chats &agrave adopter...</h2>
-        
+        </nav>
     </header>
-    <section title="formulaire">
-        <h3>Les chats &agrave adopter</h3>
-        <p>
-            <h3>Choix du chat :</h3>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            Maecenas viverra facilisis rutrum
-            <h3>Raison d'adoption :</h3>
-            <textarea name="zone de texte" rows="8" cols="30">
-                Saisissez ici les raisons pour lesquelles
-                vous souhaitez adpoter ce chat...
-            </textarea>
-        </p>
-    </section>
-    
+    <main style="background-color:#5900ff">
+        <section name="sectionGauche" style="background-color:#da2626">
+
+        </section>
+        <section name="sectionDroite" style="background-color:#4de020">
+
+        </section>
+        <section name="sectionTexteBas">
+
+        </section>
+    </main>
+    <footer style="background-color:#fa139a">
+
+    </footer>
 </body>
 </html>
